--- a/style.css
+++ b/style.css
@@ -28,14 +28,17 @@ article {
 }
 
 a:link, a:visited {
-    background-color: #f44336;
+    background-color: grey;
     color: white;
     padding: 14px 25px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    width:50%;
+    margin-left:25%;
+    
   }
   
   a:hover, a:active {
-    background-color: red;
+    background-color: black;
 }
